<resources>
    <string name="app_name">Put Down Phone</string>
    <string name="title_overlay_timer_service">Overlay Timer Service</string>
    <string name="btn_on_timer_text">O N</string>
    <string name="btn_off_timer_text">O F F</string>
    <string name="btn_color_picker">C O L O R</string>

    <string name="admob_app_id">ca-app-pub-7673979477770497~6440083717</string>
    <string name="banner_ad_unit_id">ca-app-pub-7673979477770497/3962094188</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>

    <string name="menu_areatimer">Area Timer</string>
    <string name="menu_manual">How To</string>
    <string name="menu_another">Another</string>

    <string name="text_manual_intro">
        We look at the phone habitually. For example, taking a rest during exercise, checking messages while studying, doing something in the toilet and etc.
        \n\n
        This application can reduce the time spent habitually looking at cell phones intuitively and dramatically. It can give you more powerful recognition of time through for visually.
    </string>

    <string name="text_manual_01">
        \n
        1. Decide the color of the Area Timer.
    </string>
    <string name="text_manual_02">
        \n
        2. Set Minute
        \n
        *Minute: Time before the area covers all screens
    </string>
    <string name="text_manual_03">
        \n
        3. Press the On button to start Area Timer.
    </string>

    <string name="text_manual_outro">
        \n\n
        When you look at a phone habitually, you can watch the screen that gets smaller in real time and be alert to put down your phone quickly and do important things.
        \n\n
        In order to restart the area timer, you have to lock your cell phone and unlock it again. After Unlock, Area Timer restarts.
        \n\n
        Click the Off button to exit the Area Timer completely.
    </string>

    <string name="text_app_name_01">4 Accept 5 Reject Timer</string>
    <string name="text_comment_01">REAL STUDY TIMER app for test-taker. Different action  -> timer pauses.</string>
</resources>
